test_suite/tests/ui/expected-string/byte_string.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> tests/ui/expected-string/byte_string.rs:5:22
  |
5 |     #[serde(rename = b"byte string")]
  |                      ^^^^^^^^^^^^^^
